added data to table page and css changes

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICT Project | AI Chatbot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to Our AI Chatbot Project</h1>
@@ -13,8 +15,10 @@
 
     <main>
         <p>This is our First Semester ICT Project for the Bachelor of Science in Information Technology.
-            Our project is focused on developing an AI Chatbot that can assist users with various tasks and provide information efficiently. 
-            Our aim is to make it very user-friendly and use buttons and other interactive elements to enhance the user experience and help them navigate through the website.
+            Our project is focused on developing an AI Chatbot that can assist users with various tasks and provide
+            information efficiently.
+            Our aim is to make it very user-friendly and use buttons and other interactive elements to enhance the user
+            experience and help them navigate through the website.
         </p>
 
         <h2>Our Team:</h2>
@@ -23,15 +27,16 @@
             <li>Taha Ziafat</li>
             <li>Amaan Bhatti</li>
         </ul>
-   
+
         <p>This is the home page and the following buttons will navigate you to other pages.</p>
-    <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
 
     </main>
 
     <footer>
-        
+
         <p>&copy; 2025 Our AI Chatbot Project</p>
     </footer>
 </body>
+
 </html>
