--- a/table.html
+++ b/table.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICT Project | AI Chatbot</title>
+    <title>ICT Project | Table</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<table>
-    
-</table>
+
+<body>
+    <h1> Chatbot Features</h1>
+    <p>The following are some examples of things you can try with our chatbot.
+        Feel free to improvise ; )
+    </p>
+    <table>
+        <tr>
+            <th>Feature</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Answering Questions</td>
+            <td>The chatbot can provide answers to a wide range of questions on various topics. Let your curiosity make the best of you.</td>
+        </tr>
+        <tr>
+            <td>Setting Reminders</td>
+            <td>Users can set reminders for important tasks or events. That you would forget among other things.</td>
+        </tr>
+        <tr>
+            <td>Providing Recommendations</td>
+            <td>The chatbot can suggest recommendations of books, movies, restaurants, and more based on user preferences.</td>
+        </tr>
+        <tr>
+            <td>Conversational Interaction</td>
+            <td>The chatbot can engage in natural language conversations with users. Think of it as a companion; a friend in the digital world.</td>
+        </tr>
+
+    </table>
+</body>
