added about page

--- a/table.html
+++ b/table.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1> Chatbot Features</h1>
-    <p>The following are some examples of things you can try with our chatbot.
+    <h1> Meet Artemis</h1>
+    <p>The following are some examples of things you can try with Artemis.
         Feel free to improvise ; )
     </p>
     <table>
@@ -20,7 +20,8 @@
         </tr>
         <tr>
             <td>Answering Questions</td>
-            <td>The chatbot can provide answers to a wide range of questions on various topics. Let your curiosity make the best of you.</td>
+            <td>Artemis can provide answers to a wide range of questions on various topics. Let your curiosity make
+                the best of you.</td>
         </tr>
         <tr>
             <td>Setting Reminders</td>
@@ -28,11 +29,13 @@
         </tr>
         <tr>
             <td>Providing Recommendations</td>
-            <td>The chatbot can suggest recommendations of books, movies, restaurants, and more based on user preferences.</td>
+            <td>Artemis can suggest recommendations of books, movies, restaurants, and more based on user
+                preferences.</td>
         </tr>
         <tr>
             <td>Conversational Interaction</td>
-            <td>The chatbot can engage in natural language conversations with users. Think of it as a companion; a friend in the digital world.</td>
+            <td>Artemis can engage in natural language conversations with users. Think of it as a companion; a
+                friend in the digital world.</td>
         </tr>
 
     </table>
