--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
                 <div class="social-links">
                     <a href="https://github.com/tahaziafat" target="_blank" class="social-btn" title="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/muhammad-taha-ziafat-314a86361/" target="_blank" class="social-btn" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=tahaziafat@gmail.com" target="_blank" class="social-btn" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=muhammadtahaziafat@gmail.com" target="_blank" class="social-btn" title="Email"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
