--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+    <div class="fade-in-section">
     <header>
         <h1>Welcome to Our AI Chatbot Project</h1>
     </header>
+    </div>
 
     <main>
         <p>This is our First Semester ICT Project for the Bachelor of Science in Information Technology.
