--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
+    <div class="fade-in-section">
     <h1>Help Artemis Grow</h1>
     <p class="form-intro" >
      Please fill out this form, and help us grow Artemis with your suggestions.
@@ -45,4 +46,12 @@
 
             <button type="submit">Submit</button>
              </form>
+      </div>
     </div>
+   <footer>
+        <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
+    </footer>
+
+</body>
+
+</html>
