--- a/About.html
+++ b/About.html
@@ -32,11 +32,18 @@
         Our team consists of three passionate ICT students:
     <ul>
         <li><strong>Salman Arif</strong> - The one in the back</li>
-        <li><strong>Taha Ziafat</strong> - Elite baddie fumbler</li>
+        <li><strong>Taha Ziafat</strong> - I am an IT student at Bahria University Islamabad Campus currently pursuing my undergraduate degree. I have a knack of exploring stuff related to technology and learning tons of new things. I am a chaos-powered tech enthusiast who somehow manages to write working code. I love solving problems, learning new things, and occasionally fumbling my way into success.</li>
         <li><strong>Amaan Bhatti</strong> - I am an IT Student at Bahria University Islamabad Campus currently pursuing my undergraduate degree. I love computers and everything related to them or about them which fuels my passion to learn and grow my career to something I can be proud of.</li>
     </ul>
     </p>
     </div>
+   <footer>
+        <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
+    </footer>
+
+</body>
+
+</html>
 
 </body>
 
