--- a/table.html
+++ b/table.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
+    <div class="fade-in-section">
     <h1> Meet Artemis</h1>
     <p>The following are some examples of things you can try with Artemis.
-        Feel free to improvise ; )
+        Feel free to improvise :)
     </p>
     <table>
         <tr>
@@ -39,6 +40,7 @@
         </tr>
 
     </table>
+   </div>
     <footer>
         <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
     </footer>
