--- a/table.html
+++ b/table.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <li><a href="index.html">Home</a></li>
+        <li><a href="table.html">About Artemis</a></li>
+        <li><a href="aboutservices.html">Services</a></li>
+        <li><a href="contacts.html">Contact</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="form.html">Feedback</a></li>
     <div class="fade-in-section">
     <h1> Meet Artemis</h1>
     <p>The following are some examples of things you can try with Artemis.
