--- a/contacts.html
+++ b/contacts.html
@@ -87,12 +87,16 @@
     </style>
 </head>
 <body>
-    <li><a href="index.html">Home</a></li>
+   <nav class="navbar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="table.html">About Artemis</a></li>
         <li><a href="aboutservices.html">Services</a></li>
         <li><a href="contacts.html">Contact</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="form.html">Feedback</a></li>
+    </ul>
+   </nav>
 
     <div class="fade-in-section">
         <h1>Meet The Team</h1>
