--- a/form.html
+++ b/form.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    <li><a href="index.html">Home</a></li>
+    <nav class="navbar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="table.html">About Artemis</a></li>
         <li><a href="aboutservices.html">Services</a></li>
         <li><a href="contacts.html">Contact</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="form.html">Feedback</a></li>
+    </ul>
+   </nav>
+
     <div class="fade-in-section">
     <h1>Help Artemis Grow</h1>
     <p class="form-intro" >
