--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
 
     <div id="login-options" class="modal">
         <div class="modal-content login-options-box">
-         <h2>Continue With</h2>
+         <h2>Log in or sign up</h2>
 
          <button class="login-method google">Continue with Google</button>
          <button class="login-method phone">Continue with Phone</button>
