--- a/Artemis.html
+++ b/Artemis.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artemis Chatbot</title>
+    <title>Artemis - Chatbot</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div class="fade-in-section">
     <h1>Artemis AI</h1>
 
     <div class="chat-container">
@@ -22,6 +23,7 @@
     <footer>
         <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
     </footer>
+    </div>
 
     <script src="script.js"></script>
 </body>
