minor changes to chatbot and script

--- a/Artemis.html
+++ b/Artemis.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <div class="fade-in-section">
-    <h1>Artemis AI</h1>
+        <h1>Artemis AI</h1>
 
-    <div class="chat-container">
-        <div class="chat-box" id="chat-box">
-            <!-- Chat messages will appear here -->
+        <div class="chat-container">
+            <div class="chat-box" id="chatBox">
+                <!-- Chat messages will appear here -->
+            </div>
 
-        <div class="input-area">
-            <input type="text" id="user-input" placeholder="Ask Artemis something..." />
-            <button onclick="sendMessage()">Send</button>
+            <div class="input-area">
+                <input type="text" id="userInput" placeholder="Ask Artemis something..." />
+                <button id="sendBtn">Send</button>
+            </div>
         </div>
-    </div>
  
-    <footer>
-        <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
-    </footer>
+        <footer>
+            <p style="text-align: center; font-size: 16px; color: #777;">&copy; 2025 Artemis Project</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
