--- a/form.html
+++ b/form.html
@@ -11,11 +11,11 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="table.html">About Artemis</a></li>
             <li><a href="aboutservices.html">Services</a></li>
             <li><a href="contacts.html">Contact</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="About.html">About Us</a></li>
             <li><a href="form.html">Feedback</a></li>
         </ul>
     </nav>
