--- a/aboutservices.html
+++ b/aboutservices.html
@@ -47,7 +47,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">About Artemis</a></li>
             <li><a href="aboutservices.html">Services</a></li>
             <li><a href="contacts.html">Contact</a></li>
