--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">About Artemis</a></li>
             <li><a href="aboutservices.html">Services</a></li>
             <li><a href="contacts.html">Contact</a></li>
@@ -49,7 +49,8 @@
         </div>
 
         <ul>
-            <li><strong>Salman Arif</strong> - The one in the back</li>
+            <li><strong>Salman Arif</strong> - I am an IT student at Bahria University Islamabad Campus currently
+                pursuing my undergraduate degree.</li>
             <li><strong>Taha Ziafat</strong> - I am an IT student at Bahria University Islamabad Campus currently
                 pursuing my undergraduate degree. I have a knack of exploring stuff related to technology and learning
                 tons of new things. I am a chaos-powered tech enthusiast who somehow manages to write working code. I
