Update description for Salman Arif

--- a/About.html
+++ b/About.html
@@ -49,7 +49,8 @@
         </div>
 
         <ul>
-            <li><strong>Salman Arif</strong> - The one in the back</li>
+           <li><strong>Salman Arif</strong> - I am an IT student at Bahria University Islamabad Campus currently
+                pursuing my undergraduate degree.</li>
             <li><strong>Taha Ziafat</strong> - I am an IT student at Bahria University Islamabad Campus currently
                 pursuing my undergraduate degree. I have a knack of exploring stuff related to technology and learning
                 tons of new things. I am a chaos-powered tech enthusiast who somehow manages to write working code. I
