--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="table.html">About Artemis</a></li>
             <li><a href="aboutservices.html">Services</a></li>
             <li><a href="contacts.html">Contact</a></li>
